--- a/style.css
+++ b/style.css
@@ -53,12 +53,7 @@ form {
     margin: 30px;
 }
 
-.title {
-    background-color: white;
-    width: 100%;
-    margin: 20px 20px 5px 20px;
-    padding: 20px 10px;
-}
+
 
 .datum {
     background-color: white;
@@ -78,4 +73,79 @@ form {
 }
 .slika p {
     margin: 0px;
+}
+
+main {
+    margin-top: 40px;
+    background-color: whitesmoke;
+    
+}
+
+.moda_img img {
+    height: 220px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.parf_img img {
+    height: 220px;
+    width: 100%;
+    object-fit: cover;
+}
+.title a {
+    color: black;
+    font-size: large;
+    margin-left: 10px;
+
+    
+}
+.title {
+    background-color: white;
+    height: 150px;
+    padding: 10px;
+}
+
+h2 {
+    text-transform: uppercase;
+}
+
+.moda {
+    padding-top: 20px;
+}
+.parfemi {
+    padding: 20px 0px 40px;
+}
+
+.naslov{
+    width: 100%;
+    background-color: white;
+    margin: 20px 20px 5px 20px;
+}
+
+.naslov h1 {
+    padding: 10px;
+}
+
+.slika {
+    width: 100%;
+    margin: 10px 20px 5px 20px;
+}
+.slika img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+.about {
+    width: 100%;
+    background-color: white;
+    padding: 10px;
+    margin: 10px 20px 0px 20px;
+}
+
+.sadrzaj {
+    width: 100%;
+    background-color: white;
+    padding: 10px;
+    margin: 0px 20px 50px 20px;
 }
