--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body, html {
     margin: 0;
-
+    font-family:Arial, Helvetica, sans-serif
 }
 
 .logo {
@@ -148,4 +148,89 @@ h2 {
     background-color: white;
     padding: 10px;
     margin: 0px 20px 50px 20px;
+}
+
+.article {
+    margin-top: 10px;
+}
+
+.form {
+    text-align: center;
+    border-radius: 20px;
+    background-color: lightgray;
+    padding: 20px;
+  }
+
+
+.ponisti {
+    padding: 15px;
+    color: white;
+    background-color: black;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 150px;
+}
+form {
+    padding: 5px;
+}
+.form-item label{
+    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.form-field select {
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 19px;
+    border: none;
+}
+
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+}
+
+input[type="file"] {
+    border: none;
+}
+input[type="text"] {
+    border-radius: 10px;
+    border: none;
+    padding: 5px;
+    margin: 0px 5px 5px 5px;
+}
+input[type="password"] {
+    border-radius: 10px;
+    border: none;
+    padding: 5px;
+    margin: 0px 5px 5px 5px;
+}
+textarea {
+    border-radius: 10px;
+    border: none;
+}
+.slanje {
+    margin: 10px;
+    padding: 15px;
+    width: 150px;
+    color: white;
+    background-color: red;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.form-item input[type="file"]  + label {
+    padding: 15px;
+    color: white;
+    background-color: red;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
