--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body, html {
     margin: 0;
     font-family:Arial, Helvetica, sans-serif
+    
 }
 
 .logo {
@@ -43,6 +44,7 @@ body, html {
     background-color: grey;
     color: white;
     max-width: 100%;
+    bottom: 0;
 }
 @media (max-width:700px) {
     .logo{
@@ -68,8 +70,7 @@ form {
 
 .tijelo_clanka {
     background-color: lightgrey;
-    margin-top: 30px
-    ;
+    margin-top: 30px ;
 }
 .slika p {
     margin: 0px;
@@ -78,7 +79,6 @@ form {
 main {
     margin-top: 40px;
     background-color: whitesmoke;
-    
 }
 
 .moda_img img {
